...
        <include
            android:id="@+id/secondary_layout"
            layout="@layout/content_movies_info"
            bind:contentMovie="@{movie}" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_book_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Book Tickets"
            android:elevation="4dp"
            android:textColor="@color/white"
            app:backgroundTint="@color/black"
...
