...
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@{`Popularity: `+movie.voteAverage+` / 10`}"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_book_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Book Now"
                android:textColor="@color/white"
                android:elevation="4dp"
                android:layout_marginEnd="8dp"
...
